--- a/index.html
+++ b/index.html
@@ -7,5 +7,12 @@
 </head>
 <body>
     <h1>HTML MULTIMEDIA</h1>
+    <nav>
+        <ul>
+            <li><a href="1"></a></li>
+            <li><a href="2"></a></li>
+            <li><a href="3"></a></li>
+        </ul>
+    </nav>
 </body>
 </html>
